// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signature iOS renders with custom styles 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      {
        "borderColor": "orange",
      },
    ]
  }
  testID="signature-test"
>
  <View
    style={
      {
        "backgroundColor": "#FFF",
        "flex": 1,
        "width": "100%",
      }
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
            "overflow": "hidden",
          },
          undefined,
        ]
      }
    >
      <RNCWebView
        allowFileAccess={false}
        allowsFullscreenVideo={false}
        androidHardwareAccelerationDisabled={false}
        androidLayerType="none"
        bounces={false}
        cacheEnabled={true}
        javaScriptEnabled={true}
        messagingEnabled={true}
        messagingModuleName="WebViewMessageHandler2"
        nestedScrollEnabled={false}
        onHttpError={[Function]}
        onLoadingError={[Function]}
        onLoadingFinish={[Function]}
        onLoadingProgress={[Function]}
        onLoadingStart={[Function]}
        onMessage={[Function]}
        onRenderProcessGone={[Function]}
        onShouldStartLoadWithRequest={[Function]}
        overScrollMode="always"
        saveFormDataDisabled={false}
        scalesPageToFit={true}
        setBuiltInZoomControls={true}
        setDisplayZoomControls={false}
        setSupportMultipleWindows={true}
        style={
          [
            {
              "flex": 1,
              "overflow": "hidden",
            },
            {
              "backgroundColor": "#ffffff",
            },
            undefined,
          ]
        }
        thirdPartyCookiesEnabled={true}
        useWebKit={true}
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <ActivityIndicator />
    </View>
  </View>
  <View
    style={
      {
        "backgroundColor": "red",
        "flexDirection": "row",
        "paddingTop": 16,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={false}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "red",
          "borderColor": "#0595DB",
          "borderRadius": 8,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flex": 1,
          "marginRight": 8,
          "opacity": 1,
        }
      }
      testID="signature-test$ClearButton$Touchable"
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexGrow": 0,
            "flexShrink": 0,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          style={
            {
              "color": "black",
              "fontSize": 12,
              "fontWeight": "bold",
              "lineHeight": 18,
            }
          }
          testID="signature-test$ClearButton$caption"
        >
          Clear
        </Text>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={false}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "red",
          "borderColor": "#0595DB",
          "borderRadius": 8,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flex": 1,
          "marginLeft": 8,
          "opacity": 1,
        }
      }
      testID="signature-test$SaveButton$Touchable"
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexGrow": 0,
            "flexShrink": 0,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          style={
            {
              "color": "black",
              "fontSize": 12,
              "fontWeight": "bold",
              "lineHeight": 18,
            }
          }
          testID="signature-test$SaveButton$caption"
        >
          Save
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Signature iOS renders with default styles 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      {},
    ]
  }
  testID="signature-test"
>
  <View
    style={
      {
        "backgroundColor": "#FFF",
        "flex": 1,
        "width": "100%",
      }
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
            "overflow": "hidden",
          },
          undefined,
        ]
      }
    >
      <RNCWebView
        allowFileAccess={false}
        allowsFullscreenVideo={false}
        androidHardwareAccelerationDisabled={false}
        androidLayerType="none"
        bounces={false}
        cacheEnabled={true}
        javaScriptEnabled={true}
        messagingEnabled={true}
        messagingModuleName="WebViewMessageHandler1"
        nestedScrollEnabled={false}
        onHttpError={[Function]}
        onLoadingError={[Function]}
        onLoadingFinish={[Function]}
        onLoadingProgress={[Function]}
        onLoadingStart={[Function]}
        onMessage={[Function]}
        onRenderProcessGone={[Function]}
        onShouldStartLoadWithRequest={[Function]}
        overScrollMode="always"
        saveFormDataDisabled={false}
        scalesPageToFit={true}
        setBuiltInZoomControls={true}
        setDisplayZoomControls={false}
        setSupportMultipleWindows={true}
        style={
          [
            {
              "flex": 1,
              "overflow": "hidden",
            },
            {
              "backgroundColor": "#ffffff",
            },
            undefined,
          ]
        }
        thirdPartyCookiesEnabled={true}
        useWebKit={true}
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <ActivityIndicator />
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "paddingTop": 16,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={false}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "transparent",
          "borderColor": "#0595DB",
          "borderRadius": 8,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flex": 1,
          "marginRight": 8,
          "opacity": 1,
        }
      }
      testID="signature-test$ClearButton$Touchable"
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexGrow": 0,
            "flexShrink": 0,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          style={
            {
              "color": "#0595DB",
              "fontSize": 12,
              "fontWeight": "bold",
              "lineHeight": 18,
            }
          }
          testID="signature-test$ClearButton$caption"
        >
          Clear
        </Text>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={false}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#0595DB",
          "borderColor": "#0595DB",
          "borderRadius": 8,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flex": 1,
          "marginLeft": 8,
          "opacity": 1,
        }
      }
      testID="signature-test$SaveButton$Touchable"
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexGrow": 0,
            "flexShrink": 0,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFF",
              "fontSize": 12,
              "fontWeight": "bold",
              "lineHeight": 18,
            }
          }
          testID="signature-test$SaveButton$caption"
        >
          Save
        </Text>
      </View>
    </View>
  </View>
</View>
`;
